--- a/src/main/resources/public/src/scss/formRefactoring/_layout.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_layout.scss
@@ -62,15 +62,21 @@
     font-weight: $layout-properties-panel-header-font-weight;
     color: $layout-properties-panel-header-font-color;
     background-color: $layout-properties-panel-header-bg-color;
-    padding: 0.625rem 1.563rem; // 10px 25px;
+    padding: 0.9375rem; // 15px;
   }
   &-properties-panel {
     @include properties;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: space-between;
     top: calc(#{$layout-header-height} + #{$layout-properties-panel-header-height});
     width: $layout-properties-panel-width;
     background-color: $layout-properties-panel-bg-color;
     border-left: $layout-properties-panel-border;
     box-shadow: $layout-properties-panel-box-shadow;
+    padding: 0.9375rem; // 15px;
     overflow-x: hidden;
     @include scrollbarHidden;
   }
