#9389 MR - 응대 - 중복태그 흰줄, 추천목록 콘솔에러

--- a/src/main/resources/public/src/scss/theme/default/_tag.scss
+++ b/src/main/resources/public/src/scss/theme/default/_tag.scss
@@ -19,7 +19,7 @@
   --tag-text-color: black;
   --tag-text-color--edit: black;
   --tag-pad: 0.25rem 0.5rem; // 4px, 8px
-  --tag-inset-shadow-size: 1.063rem; // 17px
+  --tag-inset-shadow-size: 1.125rem;
   --tag-invalid-color: #D39494;
   --tag-invalid-bg: rgba(211, 148, 148, 0.5);
   --tag-remove-bg: rgba(211, 148, 148, 0.3);
