#10395 (CI 연관관계) - 바뀐 DB 적용 및 연관 목록 조회

--- a/src/main/resources/public/src/scss/theme/default/_modal.scss
+++ b/src/main/resources/public/src/scss/theme/default/_modal.scss
@@ -279,7 +279,7 @@
         }
 
         // todo: 변경 이력 임시 디자인(##10126)
-        .ci-history-list {
+        .ci-list {
           table {
             width: 100%;
             .list-head {
