--- a/src/main/resources/public/template/cmdb/ci/ciView.html
+++ b/src/main/resources/public/template/cmdb/ci/ciView.html
@@ -75,7 +75,7 @@
             <div class="flex-column view-row">
                 <h3 class="sub-title under-bar bold mt-4" th:text="#{cmdb.ci.label.history}"></h3>
             </div>
-            <div class="ci-history-list" id="ciHistoryList">
+            <div class="ci-list" id="ciHistoryList">
                 <table class="list-table">
                     <thead class="list-head">
                     <tr class="flex-row align-items-center">
@@ -103,15 +103,15 @@
             <div class="flex-column view-row">
                 <h3 class="sub-title under-bar bold mt-4" th:text="#{cmdb.ci.label.relation}"></h3>
             </div>
-            <div class="ci-relation-list" id="ciRelationList">
+            <div class="ci-list" id="ciRelationList">
                 <table class="list-table">
                     <thead class="list-head">
                     <tr class="flex-row align-items-center">
-                        <th style="width: 40%;" class="align-left" th:text="#{cmdb.ci.label.relationType}"></th>
+                        <th style="width: 20%;" class="align-left" th:text="#{cmdb.ci.label.relationType}"></th>
                         <th style="width: 20%;" class="align-left" th:text="#{cmdb.ci.label.sourceCiId}"></th>
                         <th style="width: 20%;" class="align-left" th:text="#{cmdb.ci.label.sourceCiName}"></th>
-                        <th style="width: 30%;" class="align-left" th:text="#{cmdb.ci.label.targetCiId}"></th>
-                        <th style="width: 30%;" class="align-left" th:text="#{cmdb.ci.label.targetCiName}"></th>
+                        <th style="width: 20%;" class="align-left" th:text="#{cmdb.ci.label.targetCiId}"></th>
+                        <th style="width: 20%;" class="align-left" th:text="#{cmdb.ci.label.targetCiName}"></th>
                     </tr>
                     </thead>
                     <tbody class="list-body">
@@ -120,11 +120,11 @@
                         <td style="width: 100%;" colspan="5" class="align-center" th:text="#{common.msg.noData}"></td>
                     </tr>
                     <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(ciRelationList)}" th:each="ciRelation: ${ciRelationList}">
-                        <td style="width: 40%;" th:text="${ciRelation.relationTypeName}"></td>
-                        <td style="width: 40%;" th:text="${ciRelation.sourceCiId}"></td>
-                        <td style="width: 40%;" th:text="${ciRelation.sourceCiName}"></td>
-                        <td style="width: 20%;" th:text="${ciRelation.targetCiId}"></td>
-                        <td style="width: 20%;" th:text="${ciRelation.targetCiName}"></td>
+                        <td style="width: 20%;" th:text="${ciRelation.relationTypeName}"></td>
+                        <td style="width: 20%;" th:text="${ciRelation.sourceCIId}"></td>
+                        <td style="width: 20%;" th:text="${ciRelation.sourceCIName}"></td>
+                        <td style="width: 20%;" th:text="${ciRelation.targetCIId}"></td>
+                        <td style="width: 20%;" th:text="${ciRelation.targetCIName}"></td>
                     </tr>
                     </tbody>
                 </table>
