--- a/src/main/resources/public/template/cmdb/ci/ciListModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciListModal.html
@@ -38,7 +38,7 @@
             <td style="width: 0%; display: none;" id="classId" th:text="${ci.classId}"></td>
             <td style="width: 25%;" class="align-left">
                 <div class="tag-group align-middle">
-                    <span class="tag align-center text-ellipsis" th:each="tag: ${ci.tags}" th:text="${tag.tagName}"></span>
+                    <span class="tag align-center text-ellipsis" th:each="tag: ${ci.tags}" th:text="${tag.tagValue}"></span>
                 </div>
             </td>
         </tr>
