#10503 - 폼디자이너 속성항목을 labeling -> 화면 동작 정리

--- a/src/main/resources/public/template/form/formDesignerEdit.html
+++ b/src/main/resources/public/template/form/formDesignerEdit.html
@@ -273,6 +273,7 @@
 </th:block>
 </body>
 <th:block layout:fragment="script">
+    <script th:src="@{/assets/vendors/tagify/tagify.js}"></script>
     <script th:src="@{/assets/js/util/shortcut-alice.js}"></script>
     <script th:src="@{/assets/js/util/alert-alice.js}"></script>
     <script th:src="@{/assets/js/form/form.editor.context.js}"></script>
