#10422 [SCSS 개선] template 하위에 mixins 디렉토리 생성(1)
- portal, default 밑에 있는 mixin 파일은 제거하고, 코드 내부의 @mixin 이름을 변경하여 template의 mixin과 함께 관리하도록 수정

--- a/src/main/resources/public/src/scss/portal/_layout.scss
+++ b/src/main/resources/public/src/scss/portal/_layout.scss
@@ -264,7 +264,7 @@
     }
     &-content {
       margin: 3.375rem 13.75rem 0 13.75rem; // 54px 220px 0 220px
-      @include viewTemplate();
+      @include portalViewTemplate();
 
       .list { height: $layout-list-height; }
     }
@@ -277,7 +277,7 @@
     }
     &-content {
       margin: 3.375rem 13.75rem 0 13.75rem; // 54px 220px 0 220px
-      @include viewTemplate();
+      @include portalViewTemplate();
 
       .list { height: $layout-list-height }
     }
