--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -50,7 +50,7 @@
     @include editTemplate();
 
     // view
-    @include viewTemplate();
+    @include defaultViewTemplate();
   }
   // 역할, 권한, 코드 화면의 우측 영역
   .aside {
