--- a/src/main/resources/public/src/scss/theme/default/_popup.scss
+++ b/src/main/resources/public/src/scss/theme/default/_popup.scss
@@ -23,7 +23,7 @@
     margin-top: 1.25rem; //20px
   }
 
-  @include viewTemplate();
+  @include defaultViewTemplate();
   // custom-code 대상 선택 팝업
   .custom-code-content-popup {
     &.view {
