#10503 - 사용자정의차트 오류수정
- 설정 저장 시 태그 값 리스트만 전달하도록 수정.
- 차트 조회 시 라벨링 컴포넌트만 대상으로 하던 것 수정. (당시 컴포넌트 라벨과 라벨링 컴포넌트를 헷갈렸던 것 같음)

--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -637,11 +637,16 @@
 
         function getChartDto(method, chartId) {
             if (emptyValidation()) {
+                let tagList = [];
+                JSON.parse(document.getElementById('targetTags').value).forEach (tag => {
+                        tagList.push(tag.value);
+                })
+
                 let chartInfo = {
                     chartType: document.getElementById('typeSelectBox').value,
                     chartName: document.getElementById('chartName').value,
                     chartDesc: document.getElementById('chartDesc').value,
-                    targetTags: document.getElementById('targetTags').value.split(","),
+                    targetTags: tagList,
                     operation: document.getElementById('operationSelectBox').value,
                     durationDigit: document.getElementById('durationDigit').value,
                     durationUnit: document.getElementById('durationUnitSelectBox').value
