#10493 WF 외부 API 처리 구현 - 인증, 문서정보 조회WF 외부 API 처리 구현 - 문서등록 1. instance 생성시 itsm, api 구분 컬럼 추가 2. 외부 호출시 session 관련 이슈 수정 (wf_api_token.request_user_key) 3. 업무흐름 등록시 API 활성화 옵션 추가 (활성화 된 문서만 API 정상 처리) 4. 단순문의 요청 데이터 작성 후 문서 등록 진행 (정상 등록 확인)

--- a/src/main/resources/public/template/workflow/workFlowEdit.html
+++ b/src/main/resources/public/template/workflow/workFlowEdit.html
@@ -72,6 +72,12 @@
                 <option th:each="status:${statusList}" th:value="${status.code}"
                         th:text="${status.codeValue}" th:selected="${status.code} == ${documentData?.documentStatus}"></option>
             </select>
+            <!-- API 활성화 -->
+            <label class="field-label" th:text="#{document.label.apiEnable}" for="api-enable"></label>
+            <select id="api-enable" required="required">
+                <option value="true" th:text="#{document.label.enable}" th:selected="${documentData?.apiEnable == true}"></option>
+                <option value="false" th:text="#{document.label.disable}" th:selected="${documentData?.apiEnable == null || documentData?.apiEnable == false}"></option>
+            </select>
             <!-- 업무 흐름 색상 -->
             <label class="field-label" for="document-color">
                 <span th:text="#{document.label.businessFlowColor}"></span>
